--- a/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
+++ b/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Welcome to the Spring MVC Quickstart application! Get started quickly by signing up!</title>
+    <title>Welcome to Hermes Transport Company website!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
     <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}" />
@@ -15,13 +15,13 @@
         <h1>HermesWeb</h1>
         <p class="lead">
             Welcome to Hermes Transport Company website!
-            If you are an employee of the company, please sign in.
         </p>
         <p>
             <a href="/signin" th:href="@{/signin}" class="btn btn-success btn-lg">Sign in</a>
+            <a href="/signup" th:href="@{/signup}" class="btn btn-success btn-lg">Sign up</a>
         </p>
     </div>
-    <div th:replace="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
+    <div th:replace="fragments/footer :: footer">2013 The Static Templates</div>
 </div>
 </body>
 </html>
