--- a/src/main/webapp/WEB-INF/views/signin/signin.html
+++ b/src/main/webapp/WEB-INF/views/signin/signin.html
@@ -7,44 +7,59 @@
     <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}" />
 </head>
 <body>
-<form class="form-narrow form-horizontal" action="#" method="post" th:action="@{/authenticate}">
-    <th:block th:if="${param.error != null}">
-        <div th:replace="fragments/alert :: alert (type='danger', message='Sign in error. Please try again.')">Alert</div>
-    </th:block>
-    <fieldset>
-        <legend>Please Sign In</legend>
-        <div class="form-group">
-            <label for="inputLogin" class="col-lg-2 control-label">Login</label>
-            <div class="col-lg-10">
-                <input type="text" class="form-control" id="inputLogin" placeholder="Login" name="username" />
-            </div>
+
+<div class="form-group">
+    <form th:action="@{/appLogin}" method="POST">
+        <div class="col-lg-10">
+            Username : <input type="text" name="app_username"/>
         </div>
-        <div class="form-group">
-            <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-            <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" />
-            </div>
+        <br/><br/>
+        <div class="col-lg-10">
+            Password: <input type="password" name="app_password"/>
         </div>
-        <div class="form-group">
-            <div class="col-lg-offset-2 col-lg-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="_spring_security_remember_me" /> Remember me
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-lg-offset-2 col-lg-10">
-                <button type="submit" class="btn btn-default">Sign in</button>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-lg-offset-2 col-lg-10">
-                <p>New here? <a href="signup" th:href="@{/signup}">Sign Up</a></p>
-            </div>
-        </div>
-    </fieldset>
-</form>
+        <br/><br/>
+        <input type="submit" value="Login"/>
+    </form>
+</div>
+
+<!--<form class="form-narrow form-horizontal" action="#" method="post" th:action="@{/appLogin}">-->
+    <!--<th:block th:if="${param.error != null}">-->
+        <!--<div th:replace="fragments/alert :: alert (type='danger', message='Sign in error. Please try again.')">Alert</div>-->
+    <!--</th:block>-->
+    <!--<fieldset>-->
+        <!--<legend>Please Sign In</legend>-->
+        <!--<div class="form-group">-->
+            <!--<label for="inputLogin" class="col-lg-2 control-label">Login</label>-->
+            <!--<div class="col-lg-10">-->
+                <!--<input type="text" class="form-control" id="inputLogin" placeholder="Login" name="accountname" />-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+            <!--<label for="inputPassword" class="col-lg-2 control-label">Password</label>-->
+            <!--<div class="col-lg-10">-->
+                <!--<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" />-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+            <!--<div class="col-lg-offset-2 col-lg-10">-->
+                <!--<div class="checkbox">-->
+                    <!--<label>-->
+                        <!--<input type="checkbox" name="_spring_security_remember_me" /> Remember me-->
+                    <!--</label>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+            <!--<div class="col-lg-offset-2 col-lg-10">-->
+                <!--<button type="submit" class="btn btn-default">Sign in</button>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+            <!--<div class="col-lg-offset-2 col-lg-10">-->
+                <!--<p>New here? <a href="signup" th:href="@{/signup}">Sign Up</a></p>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</fieldset>-->
+<!--</form>-->
 </body>
 </html>
