--- a/src/main/webapp/resources/css/core.css
+++ b/src/main/webapp/resources/css/core.css
@@ -18,12 +18,20 @@ body {
             box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
 
+.form-extended{
+    max-width: 735px;
+}
+
     /*//////////////////////////////// Added By Ivan ////////////////////////////////*/
 
 .form-narrow-trans {
     max-width: 490px;
     padding: 0px 0px 0px;
     margin: 0 auto 20px;
+}
+
+.form-extended {
+    max-width: 735px;
 }
 
 .full-width {
@@ -49,6 +57,10 @@ body {
     border-left: 7px solid #5cb85c;
 }
 
+.button-border {
+    border-bottom: 7px solid #5cb85c;
+}
+
 .btn-next-cargo{
     font-size: 18px;
 }
@@ -63,4 +75,54 @@ body {
 
 .fixed-min-height{
     min-height: 460px;
+}
+
+.hermes-table{
+    table-layout: fixed;
+    text-align: center;
+    font-size: 18px;
+}
+
+.centered{
+    text-align: center;
+}
+
+table.centered-headers th{
+    text-align: center;
+}
+
+table.high-row tr, .high-row{
+    line-height: 30px;
+}
+
+div.table-legend h3{
+    font-size: 24px;
+    color: #ffffff;
+    background-color: #5cb85c;
+}
+
+.no-padding{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.small-padding{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.table-header{
+    background-colour: #5cb85c;
+}
+
+tr:nth-child(even) {
+    background-color: #eeeeee;
+}
+
+.buffer{
+    padding-top: 35px;
+}
+
+.smaller-margin{
+    margin-bottom: 10px;
 }
