--- a/src/main/webapp/WEB-INF/views/addvehicle/addvehicle.html
+++ b/src/main/webapp/WEB-INF/views/addvehicle/addvehicle.html
@@ -40,7 +40,7 @@
         <div class="form-narrow-trans">
             <button type="submit" class="btn btn-success btn-lg coupled-lower full-width btn-finish-order">Add vehicle</button>
         </div>
-        <div th:revehicle="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
+        <div th:replace="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
     </div>
 </form>
 </body>
