New pages in progress

--- a/src/main/webapp/WEB-INF/views/addhaul/addhaul.html
+++ b/src/main/webapp/WEB-INF/views/addhaul/addhaul.html
@@ -9,6 +9,7 @@
     <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<div th:replace="fragments/header :: header">Header</div>
 <!--<div th:reemployee="fragments/header :: header">Header</div>-->
 <form class="" method="post" th:action="@{/addhaul}">
 <div class="container">
