--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Hermes</a>
+            <a class="navbar-brand" href="/" th:href="@{/}">Hermes</a>
         </div>
         <div class="navbar-collapse collapse">
             <!--<ul class="nav navbar-nav">-->
