--- a/src/main/webapp/WEB-INF/views/signin/signin.html
+++ b/src/main/webapp/WEB-INF/views/signin/signin.html
@@ -7,7 +7,7 @@
     <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}" />
 </head>
 <body>
-
+<div th:replace="fragments/header :: header">Header</div>
 <div class="form-group">
     <form th:action="@{/appLogin}" method="POST">
         <div class="col-lg-10">
