--- a/src/main/webapp/WEB-INF/views/tables/accounts.html
+++ b/src/main/webapp/WEB-INF/views/tables/accounts.html
@@ -8,7 +8,8 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
 </head>
-<div>
+<body>
+<div th:replace="fragments/header :: header">Header</div>
 <!--<div th:replace="fragments/header :: header">Header</div>-->
 <div class="container table-legend">
     <div class="text-center">
@@ -17,7 +18,7 @@
             All currently registered accounts:
         </p>
     </div>
-    <div class="form-narrow form-horizontal coupled-borders no-padding">
+    <div class="form-narrow form-horizontal coupled-borders coupled-upper no-padding">
 
         <div th:if="${not #lists.isEmpty(admins)}">
             <h3 class="centered smaller-margin">Admins</h3>
@@ -103,7 +104,9 @@
                 </th:block>
             </table>
         </div>
-
+    </div>
+    <div class="form-narrow-trans">
+        <a href="/" th:href="@{/}" class="btn btn-success btn-lg coupled-lower full-width btn-finish-order">Back</a>
     </div>
     <div th:replace="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
 </div>
