--- a/src/main/webapp/WEB-INF/views/tables/employees.html
+++ b/src/main/webapp/WEB-INF/views/tables/employees.html
@@ -9,6 +9,7 @@
     <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<div th:replace="fragments/header :: header">Header</div>
 <!--<div th:reemployee="fragments/header :: header">Header</div>-->
 <div class="container">
     <div class="text-center">
@@ -32,6 +33,9 @@
                 </tr>
             </th:block>
         </table>
+    </div>
+    <div class="form-narrow-trans">
+        <a href="/" th:href="@{/}" class="btn btn-success btn-lg no-upper-margin full-width btn-finish-order">Back</a>
     </div>
     <div th:replace="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
 </div>
